<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/clouds"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="250dp"
        android:textColor="@color/dark_blue"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:layout_gravity="center_horizontal"
        android:textSize="20dp"
        android:layout_marginTop="100dp"
        android:textColor="@color/dark_blue"/>
    <EditText
        android:id="@+id/city"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        />
    <Button
        android:id="@+id/show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:text="@string/show"
        android:textSize="20dp"
        android:background="@color/orange"
        />


</LinearLayout>